--- a/product.yml
+++ b/product.yml
@@ -5,6 +5,6 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 111111
-    url: jdbc:mysql://192.168.2.200:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
