--- a/product.yml
+++ b/product.yml
@@ -6,3 +6,5 @@ spring:
     url: jdbc:mysql://localhost:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+
+env: test
